src/com/rapidminer/operator/modelling/converters/alchemy/parser/alchemyMLNGrammarParser.java
// Generated from alchemyMLNGrammar.g4 by ANTLR 4.2
package com.rapidminer.operator.modelling.converters.alchemy.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class alchemyMLNGrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_COMMENT=1, COMMENT=2, WS=3, NL=4, LP=5, RP=6, LCP=7, RCP=8, LSP=9, 
		RSP=10, DOTS=11, DOT=12, COL=13, COM=14, EXCL=15, AND=16, OR=17, IMPLIES=18, 
		IFF=19, U_QUANT=20, E_QUANT=21, EQ=22, PLUS=23, STAR=24, GT=25, LT=26, 
		GE=27, LE=28, NE=29, MINUS=30, SLASH=31, MOD=32, INT=33, FLOAT=34, VAR_ID=35, 
		CONST_ID=36, STRING=37;
	public static final String[] tokenNames = {
		"<INVALID>", "LINE_COMMENT", "COMMENT", "WS", "NL", "'('", "')'", "'{'", 
		"'}'", "'['", "']'", "'...'", "'.'", "':'", "','", "'!'", "'^'", "'v'", 
		"'=>'", "'<=>'", "U_QUANT", "E_QUANT", "'='", "'+'", "'*'", "'>'", "'<'", 
		"'>='", "'<='", "'!='", "'-'", "'/'", "'%'", "INT", "FLOAT", "VAR_ID", 
		"CONST_ID", "STRING"
	};
	public static final int
		RULE_ruleFile = 0, RULE_dbFile = 1, RULE_infFile = 2, RULE_constant = 3, 
		RULE_expVariable = 4, RULE_variable = 5, RULE_exclType = 6, RULE_type = 7, 
		RULE_startInt = 8, RULE_endInt = 9, RULE_doubleNL = 10, RULE_constantList = 11, 
		RULE_variableList = 12, RULE_typeList = 13, RULE_exIntList = 14, RULE_plainIntList = 15, 
		RULE_intList = 16, RULE_number = 17, RULE_and = 18, RULE_or = 19, RULE_implies = 20, 
		RULE_iff = 21, RULE_quantifier = 22, RULE_eq = 23, RULE_function = 24, 
		RULE_builtinFunctionSymbol = 25, RULE_builtinPrefixFunctionSymbol = 26, 
		RULE_predicate = 27, RULE_builtinPredicateSymbol = 28, RULE_predicateApplication = 29, 
		RULE_functionApplication = 30, RULE_argument = 31, RULE_groundPredicateApplication = 32, 
		RULE_groundFunctionApplication = 33, RULE_groundArgument = 34, RULE_returnValue = 35, 
		RULE_functionDef = 36, RULE_typeDecl = 37, RULE_predicateDecl = 38, RULE_functionDecl = 39, 
		RULE_plainFormula = 40, RULE_probability = 41, RULE_probabilityStatement = 42, 
		RULE_weight = 43, RULE_utilWeight = 44, RULE_probWeight = 45, RULE_weights = 46, 
		RULE_weightedFormula = 47, RULE_hardFormula = 48, RULE_formula = 49, RULE_groundFormula = 50;
	public static final String[] ruleNames = {
		"ruleFile", "dbFile", "infFile", "constant", "expVariable", "variable", 
		"exclType", "type", "startInt", "endInt", "doubleNL", "constantList", 
		"variableList", "typeList", "exIntList", "plainIntList", "intList", "number", 
		"and", "or", "implies", "iff", "quantifier", "eq", "function", "builtinFunctionSymbol", 
		"builtinPrefixFunctionSymbol", "predicate", "builtinPredicateSymbol", 
		"predicateApplication", "functionApplication", "argument", "groundPredicateApplication", 
		"groundFunctionApplication", "groundArgument", "returnValue", "functionDef", 
		"typeDecl", "predicateDecl", "functionDecl", "plainFormula", "probability", 
		"probabilityStatement", "weight", "utilWeight", "probWeight", "weights", 
		"weightedFormula", "hardFormula", "formula", "groundFormula"
	};

	@Override
	public String getGrammarFileName() { return "alchemyMLNGrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public alchemyMLNGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RuleFileContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(alchemyMLNGrammarParser.NL); }
		public List<PredicateDeclContext> predicateDecl() {
			return getRuleContexts(PredicateDeclContext.class);
		}
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public List<TypeDeclContext> typeDecl() {
			return getRuleContexts(TypeDeclContext.class);
		}
		public TerminalNode NL(int i) {
			return getToken(alchemyMLNGrammarParser.NL, i);
		}
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public TypeDeclContext typeDecl(int i) {
			return getRuleContext(TypeDeclContext.class,i);
		}
		public PredicateDeclContext predicateDecl(int i) {
			return getRuleContext(PredicateDeclContext.class,i);
		}
		public RuleFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).enterRuleFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).exitRuleFile(this);
		}
	}

	public final RuleFileContext ruleFile() throws RecognitionException {
		RuleFileContext _localctx = new RuleFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ruleFile);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(102); match(NL);
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(119);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(116);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(108); typeDecl();
						{
						setState(110); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(109); match(NL);
							}
							}
							setState(112); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==NL );
						}
						}
						} 
					}
					setState(118);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
				break;
			}
			setState(135);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(123);
						switch (_input.LA(1)) {
						case CONST_ID:
							{
							setState(121); predicateDecl();
							}
							break;
						case VAR_ID:
							{
							setState(122); functionDecl();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						{
						setState(126); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(125); match(NL);
							}
							}
							setState(128); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==NL );
						}
						}
						} 
					}
					setState(134);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				}
				break;
			}
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LP) | (1L << LSP) | (1L << COL) | (1L << EXCL) | (1L << U_QUANT) | (1L << E_QUANT) | (1L << PLUS) | (1L << MINUS) | (1L << INT) | (1L << FLOAT) | (1L << VAR_ID) | (1L << CONST_ID) | (1L << STRING))) != 0)) {
				{
				{
				setState(137); formula();
				setState(139); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(138); match(NL);
					}
					}
					setState(141); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NL );
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DbFileContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(alchemyMLNGrammarParser.NL); }
		public GroundFormulaContext groundFormula(int i) {
			return getRuleContext(GroundFormulaContext.class,i);
		}
		public List<GroundFormulaContext> groundFormula() {
			return getRuleContexts(GroundFormulaContext.class);
		}
		public TerminalNode NL(int i) {
			return getToken(alchemyMLNGrammarParser.NL, i);
		}
		public DbFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dbFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).enterDbFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).exitDbFile(this);
		}
	}

	public final DbFileContext dbFile() throws RecognitionException {
		DbFileContext _localctx = new DbFileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dbFile);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NL) | (1L << LP) | (1L << EXCL) | (1L << MINUS) | (1L << INT) | (1L << FLOAT) | (1L << CONST_ID) | (1L << STRING))) != 0)) {
				{
				{
				setState(148); groundFormula();
				setState(152);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(149); match(NL);
						}
						} 
					}
					setState(154);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				}
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InfFileContext extends ParserRuleContext {
		public List<ProbabilityStatementContext> probabilityStatement() {
			return getRuleContexts(ProbabilityStatementContext.class);
		}
		public List<TerminalNode> NL() { return getTokens(alchemyMLNGrammarParser.NL); }
		public ProbabilityStatementContext probabilityStatement(int i) {
			return getRuleContext(ProbabilityStatementContext.class,i);
		}
		public TerminalNode NL(int i) {
			return getToken(alchemyMLNGrammarParser.NL, i);
		}
		public InfFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).enterInfFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).exitInfFile(this);
		}
	}

	public final InfFileContext infFile() throws RecognitionException {
		InfFileContext _localctx = new InfFileContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_infFile);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NL) | (1L << LP) | (1L << EXCL) | (1L << MINUS) | (1L << INT) | (1L << FLOAT) | (1L << CONST_ID) | (1L << STRING))) != 0)) {
				{
				{
				setState(160); probabilityStatement();
				setState(164);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(161); match(NL);
						}
						} 
					}
					setState(166);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(alchemyMLNGrammarParser.STRING, 0); }
		public TerminalNode CONST_ID() { return getToken(alchemyMLNGrammarParser.CONST_ID, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).exitConstant(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			_la = _input.LA(1);
			if ( !(_la==CONST_ID || _la==STRING) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpVariableContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(alchemyMLNGrammarParser.PLUS, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ExpVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).enterExpVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).exitExpVariable(this);
		}
	}

	public final ExpVariableContext expVariable() throws RecognitionException {
		ExpVariableContext _localctx = new ExpVariableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174); match(PLUS);
			setState(175); variable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode VAR_ID() { return getToken(alchemyMLNGrammarParser.VAR_ID, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177); match(VAR_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExclTypeContext extends ParserRuleContext {
		public TerminalNode VAR_ID() { return getToken(alchemyMLNGrammarParser.VAR_ID, 0); }
		public TerminalNode EXCL() { return getToken(alchemyMLNGrammarParser.EXCL, 0); }
		public ExclTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exclType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).enterExclType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).exitExclType(this);
		}
	}

	public final ExclTypeContext exclType() throws RecognitionException {
		ExclTypeContext _localctx = new ExclTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_exclType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179); match(VAR_ID);
			setState(180); match(EXCL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public ExclTypeContext exclType() {
			return getRuleContext(ExclTypeContext.class,0);
		}
		public TerminalNode VAR_ID() { return getToken(alchemyMLNGrammarParser.VAR_ID, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		try {
			setState(184);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(182); match(VAR_ID);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(183); exclType();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartIntContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(alchemyMLNGrammarParser.INT, 0); }
		public StartIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).enterStartInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).exitStartInt(this);
		}
	}

	public final StartIntContext startInt() throws RecognitionException {
		StartIntContext _localctx = new StartIntContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_startInt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186); match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndIntContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(alchemyMLNGrammarParser.INT, 0); }
		public EndIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).enterEndInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).exitEndInt(this);
		}
	}

	public final EndIntContext endInt() throws RecognitionException {
		EndIntContext _localctx = new EndIntContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_endInt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188); match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DoubleNLContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(alchemyMLNGrammarParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(alchemyMLNGrammarParser.NL, i);
		}
		public DoubleNLContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doubleNL; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).enterDoubleNL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).exitDoubleNL(this);
		}
	}

	public final DoubleNLContext doubleNL() throws RecognitionException {
		DoubleNLContext _localctx = new DoubleNLContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_doubleNL);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(190); match(NL);
				}
				}
				setState(193); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NL );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantListContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(alchemyMLNGrammarParser.NL); }
		public List<ConstantContext> constant() {
			return getRuleContexts(ConstantContext.class);
		}
		public List<TerminalNode> COM() { return getTokens(alchemyMLNGrammarParser.COM); }
		public TerminalNode NL(int i) {
			return getToken(alchemyMLNGrammarParser.NL, i);
		}
		public TerminalNode COM(int i) {
			return getToken(alchemyMLNGrammarParser.COM, i);
		}
		public ConstantContext constant(int i) {
			return getRuleContext(ConstantContext.class,i);
		}
		public ConstantListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).enterConstantList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).exitConstantList(this);
		}
	}

	public final ConstantListContext constantList() throws RecognitionException {
		ConstantListContext _localctx = new ConstantListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_constantList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195); constant();
			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NL) {
				{
				{
				setState(196); match(NL);
				}
				}
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(206);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COM) {
				{
				{
				setState(202); match(COM);
				setState(203); constant();
				}
				}
				setState(208);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableListContext extends ParserRuleContext {
		public List<TerminalNode> COM() { return getTokens(alchemyMLNGrammarParser.COM); }
		public ExpVariableContext expVariable(int i) {
			return getRuleContext(ExpVariableContext.class,i);
		}
		public List<ExpVariableContext> expVariable() {
			return getRuleContexts(ExpVariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public TerminalNode COM(int i) {
			return getToken(alchemyMLNGrammarParser.COM, i);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).enterVariableList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alchemyMLNGrammarListener ) ((alchemyMLNGrammarListener)listener).exitVariableList(this);
		}
	}
